<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agendue</string>
    <string name="title_projects">Projects</string>
    <string name="personal_tasks">Personal Tasks</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Agendue</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_to_agendue">Welcome to Agendue</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create An Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_credentials">Your username or password is incorrect</string>
    <string name="error_fields_required">These fields are required</string>
    <string name="connection_error">Poor connection, please try again.</string>
    <string name="all_tasks">All Tasks</string>
    <string name="project_tasks">Tasks</string>
    <string name="project_shares">Team Members</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assigned_to">Assigned To</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="sharing">Sharing</string>
    <string name="add_project">Add Project</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_project_text">Project name:</string>
    <string name="error_no_project_name">You must enter a project name</string>
    <string name="add_task_name">Task Name</string>
    <string name="duedate">Due Date</string>
    <string name="assign_to">Assign to</string>
    <string name="description">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="error_no_task_name">You must enter a task name</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="remove_due_date">Remove Due Date</string>
    <string name="enter_an_email_address">Enter an email address</string>
    <string name="share_project">Share Project</string>
w    <string name="edit_task">Edit Task</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="bulletins">Bulletins</string>
    <string name="tasks">Tasks</string>
    <string name="team">Team</string>
    <string name="add_bulletin">Add Bulletin Post</string>
    <string name="add_bulletin_subject">Bulletin Subject</string>
    <string name="add_bulletin_content">Bulletin Message</string>
    <string name="error_no_bulletin_content">You must enter a message</string>
    <string name="whiteboard">Notebook</string>
    <string name="no_tasks_here">No tasks here.  Click the + icon to get started.</string>
    <string name="no_tasks_here2">No tasks here.</string>
    <string name="no_tasks_swipe_from_left">No tasks here.</string>
    <string name="no_completed_tasks">No completed tasks.</string>
    <string name="no_projects_here">No projects here.  Click the + icon to get started.</string>
    <string name="no_notebook_here">Your notebook is empty.</string>
    <string name="no_due_date">No due date</string>
    <string name="unassigned">Unassigned</string>
    <string name="no_bulletins">No bulletins posted here yet.</string>
    <string name="logging_in">Logging in...</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="delete_project_confirmation">Are you sure you want to delete this project?</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="create_an_account">Create An Account</string>
    <string name="create_an_account_UL"><u>Create An Account</u></string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="error_invalid_account_info">The account information you entered is invalid. Please check it and try again.</string>
    <string name="none">None</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_details">Task Details</string>
    <string name="signup">Sign Up</string>
    <string name="signup_UL"><u>Sign Up</u></string>
    <string name="label">Label</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="edit_project">Edit Project</string>
    <string name="title_landing">Home</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="productivity_score">Productivity Score</string>
    <string name="show_complete_tasks">Show complete</string>
    <string name="show_incomplete_tasks">Show incomplete</string>
    <string name="logged_in_as">Logged in as: </string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="legal">Legal Acknowledgments</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="legal_acknowledgements">Floating Action Button\nThe MIT License (MIT)\nCopyright (c) 2014 Oleksandr Melnykov\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="today">Today</string>
    <string name="delete_project">Delete Project</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="edit_notebook_text">To edit the notebook, you must use the mobile website.</string>
    <string name="title_activity_agendue_login">AgendueLogin</string>
    <string name="no_incomplete_tasks">You have no incomplete tasks.</string>
    <string name="you_have">You have </string>
    <string name="incomplete_tasks"> incomplete tasks.</string>
    <string name="incomplete_task"> incomplete task.</string>

</resources>
