<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.agendue.agendue.SettingsFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/logged_in_as"
        android:id="@+id/settings_username"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@id/settings_username"
        android:id="@+id/settings_logout_button"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/legal"
        android:gravity="center"
        android:id="@+id/settings_legal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settings_logout_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/settings_legal"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legal_acknowledgements"/>
        </ScrollView>
</RelativeLayout>
